--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@ footer a:hover { text-decoration: underline; }
     </div>
     <div class="host-section reveal">
       <p><strong>Hosted by the Learning Planet Institute Team</strong><br>
-      <strong>Dr Marieve Lartigau Laborie</strong>, dental surgeon &amp; LPI PhD student (Mental Health &amp; Oral Health)<br>
+      Dr Marieve Lartigau Laborie, dental surgeon &amp; LPI PhD student (Mental Health &amp; Oral Health)<br>
       LPI Master 2 Students: Dekyi DE, Giullianna BORGES LOPES, Janita NAZ, and Yaqing HUO</p>
     </div>
   </div>
