--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@ footer a:hover { text-decoration: underline; }
 <!-- ===== NAVIGATION ===== -->
 <nav class="navbar" id="navbar">
   <a href="https://www.learningplanetinstitute.org/en/" target="_blank" class="nav-logo" title="Learning Planet Institute">
-    <img src="images/lpi-logo.svg" alt="Learning Planet Institute" class="nav-logo-img">
+    <img src="images/lpi_logo_cmjn.png" alt="Learning Planet Institute" class="nav-logo-img">
   </a>
   <ul class="nav-links">
     <li><a href="#about">About</a></li>
