--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>On the Frontiers of Art & Health</title>
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-<style>
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"><style>
 *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
 
 :root {
@@ -23,11 +22,22 @@
 
 html { scroll-behavior: smooth; scroll-padding-top: 80px; }
 
+
+
+
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   color: var(--text-dark);
   background: var(--off-white);
   overflow-x: hidden;
+  /* 稍微增加字间距和行高，提升艺术感 */
+  letter-spacing: -0.01em; 
+  line-height: 1.6;
+}
+
+.hero-title, .section-title, .nav-logo {
+  /* 标题保持使用 Space Grotesk，这是非常棒的选择，很有科学探索感 */
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 /* ===== NAVIGATION ===== */
