--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>On the Frontiers of Art & Health</title>
-<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"><style>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet"><style>
 *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
 
 :root {
@@ -26,20 +26,24 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; }
 
 
 body {
-  font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  color: var(--text-dark);
-  background: var(--off-white);
-  overflow-x: hidden;
-  /* 稍微增加字间距和行高，提升艺术感 */
-  letter-spacing: -0.01em; 
-  line-height: 1.6;
+  font-family: 'Outfit', sans-serif; /* 全局换成更圆润的字体 */
 }
 
-.hero-title, .section-title, .nav-logo {
-  /* 标题保持使用 Space Grotesk，这是非常棒的选择，很有科学探索感 */
-  font-family: 'Space Grotesk', sans-serif;
+.hero-title {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 700;
+  letter-spacing: -0.02em; /* 稍微缩紧字间距，更有设计感 */
+  text-shadow: none; /* !!! 重点：删除这个阴影，会让文字立刻变清晰 */
+  line-height: 1.0;
 }
 
+.hero-title span {
+  /* 这里建议使用更明亮的渐变色，模拟海报效果 */
+  background: linear-gradient(90deg, #FFD93D, #FFB4A2, #00C9A7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+  
 /* ===== NAVIGATION ===== */
 .navbar {
   position: fixed;
