--- a/index.html
+++ b/index.html
@@ -61,12 +61,9 @@ body {
 .nav-logo-img {
   height: 42px; width: auto;
   transition: transform 0.3s;
-  filter: brightness(10);
 }
 
-.navbar.scrolled .nav-logo-img {
-  filter: brightness(10);
-}
+
 
 .nav-logo:hover .nav-logo-img { transform: scale(1.08); }
 
@@ -944,7 +941,7 @@ footer a:hover { text-decoration: underline; }
 <!-- ===== NAVIGATION ===== -->
 <nav class="navbar" id="navbar">
   <a href="https://www.learningplanetinstitute.org/en/" target="_blank" class="nav-logo" title="Learning Planet Institute">
-    <img src="images/lpi-logo.svg" alt="Learning Planet Institute" class="nav-logo-img">
+    <img src="images/lpi_logo_cmjn.png" alt="Learning Planet Institute" class="nav-logo-img">
   </a>
   <ul class="nav-links">
     <li><a href="#about">About</a></li>
@@ -1031,7 +1028,7 @@ footer a:hover { text-decoration: underline; }
 <section class="gallery-strip" id="gallery">
   <div class="gallery-strip-header reveal">
     <div class="section-label">Featured Artworks</div>
-    <h2 class="section-title">Cosmic Art by Fanie Fabia</h2>
+    <h2 class="section-title">Cosmic Art by Isabelle Wachsmuth</h2>
     <p>A glimpse into the visual world you'll explore during the workshops</p>
   </div>
   <div class="gallery-scroll">
@@ -1098,7 +1095,7 @@ footer a:hover { text-decoration: underline; }
     </div>
     <div class="host-section reveal">
       <p><strong>Hosted by the Learning Planet Institute Team</strong><br>
-      <strong>Dr Marieve Lartigau Laborie</strong>, dental surgeon &amp; LPI PhD student (Mental Health &amp; Oral Health)<br>
+      Dr Marieve Lartigau Laborie, dental surgeon &amp; LPI PhD student (Mental Health &amp; Oral Health)<br>
       LPI Master 2 Students: Dekyi DE, Giullianna BORGES LOPES, Janita NAZ, and Yaqing HUO</p>
     </div>
   </div>
