--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@ footer a:hover { text-decoration: underline; }
       <span>Becoming</span>
     </div>
     <p class="hero-subtitle">
-      A transdisciplinary afternoon exploring how music, visual expression and narration serve as regulators of physiological states and pathways to health.
+      A transdisciplinary afternoon exploring how music, visual arts and storytelling serve as regulators of physiological states and pathways to health.
     </p>
     <div class="hero-info">
       <div class="hero-info-item">
@@ -1016,7 +1016,7 @@ footer a:hover { text-decoration: underline; }
     <div class="about-intro reveal">
       <div class="section-label">About the Event</div>
       <h2 class="section-title">Where Art Meets Science</h2>
-      <p>Across cultures and centuries, music, visual expression and narration have been used not simply as creative productions, but as regulators of physiological states, as mirrors of emotions, and as portals to the creation of meaning.</p>
+      <p>Across cultures and centuries, music, visual arts and storytelling have been used not simply as creative productions, but as regulators of physiological states, as mirrors of emotions, and as portals to the creation of meaning.</p>
       <p>Our invitation is to explore these mechanisms through an evidence-based lens, while honouring the profoundly subjective nature of art. Our aim is simple yet ambitious: to show that art is not an accessory to health, it is a pathway to it.</p>
       <p>By combining subjective experience with objective measurement, we hope to illuminate how transdisciplinary methods can strengthen well-being and inspire future research.</p>
       <div class="about-quote reveal">"Art is not an accessory to health &mdash; it is a pathway to it."</div>
@@ -1029,7 +1029,7 @@ footer a:hover { text-decoration: underline; }
   <div class="gallery-strip-header reveal">
     <div class="section-label">Featured Artworks</div>
     <h2 class="section-title">Cosmic Art by Isabelle Wachsmuth</h2>
-    <p>A glimpse into the visual world you'll explore during the workshops</p>
+    <p>Be inspired: Cosmic Art by Isabelle Wachsmuth</p>
   </div>
   <div class="gallery-scroll">
     <div class="gallery-item"><img src="images/gallery1.jpg" alt="Cosmic Art 1" loading="lazy"></div>
@@ -1120,7 +1120,7 @@ footer a:hover { text-decoration: underline; }
       <div class="timeline-item reveal">
         <div class="timeline-dot"></div>
         <div class="timeline-time">14:00 &mdash; 14:15</div>
-        <div class="timeline-title">Welcome &amp; Installation</div>
+        <div class="timeline-title">Welcome</div>
         <div class="timeline-location">&#128205; Learning Center</div>
         <div class="timeline-desc">Reception of participants, orientation to spaces, calm atmosphere with quiet music.</div>
       </div>
@@ -1184,13 +1184,13 @@ footer a:hover { text-decoration: underline; }
         <div class="timeline-time">15:20 &mdash; 16:05</div>
         <div class="timeline-title">Immersive Workshops &mdash; Group 1</div>
         <div class="timeline-location">&#128205; Learning Extension &amp; Learning Center</div>
-        <div class="timeline-desc">Art therapy workshop with music, visual arts, and physical/emotional work. Parallel writing workshop and case study interviews.</div>
+        <div class="timeline-desc">Art therapy workshop with music and visual arts. Parallel storytelling and writing workshop and case study interviews.</div>
         <div class="timeline-speakers">&#128100; Fanie Fabia &amp; Yazied Kei Lanur</div>
         <div class="timeline-expand">
           <div class="timeline-expand-inner">
             <div class="workshop-detail">
               <div class="workshop-detail-icon">&#127912;</div>
-              <p><strong>Art Therapy (Fanie Fabia):</strong> Explore cosmic art and visual expression while the Visual Analogue Scale (VAS) measures immediate variations in subjective experience before and after the session.</p>
+              <p><strong>Art Therapy (Fanie Fabia):</strong> Art therapy is a guided process led by a trained art therapist, supporting individuals to explore their emotions and challenges through art, in a safe therapeutic setting. Structured guidance and creative freedom come together to meet people where they are.</p>
             </div>
             <div class="workshop-detail">
               <div class="workshop-detail-icon">&#128221;</div>
@@ -1209,7 +1209,7 @@ footer a:hover { text-decoration: underline; }
         <div class="timeline-time">16:05 &mdash; 17:20</div>
         <div class="timeline-title">Break &amp; Workshops &mdash; Group 2</div>
         <div class="timeline-location">&#128205; Lounge &amp; Learning Extension</div>
-        <div class="timeline-desc">Sustainable food &amp; drinks break, free exchanges, then second round of art therapy and writing workshops.</div>
+        <div class="timeline-desc">Sustainable food &amp; drinks break, then second round of art therapy and writing workshops.</div>
         <div class="timeline-speakers">&#128100; Fanie Fabia &amp; Yazied Kei Lanur</div>
         <div class="timeline-expand">
           <div class="timeline-expand-inner">
@@ -1230,7 +1230,7 @@ footer a:hover { text-decoration: underline; }
         <div class="timeline-time">17:20 &mdash; 18:00</div>
         <div class="timeline-title">Results &amp; Collective Artistic Closing</div>
         <div class="timeline-location">&#128205; Learning Center &amp; Lounge</div>
-        <div class="timeline-desc">Presentation of preliminary results, scientific perspectives, acknowledgements, and a collective closing with a mini-concert celebrating music, movement, and joy.</div>
+        <div class="timeline-desc">Presentation of preliminary results, scientific perspectives, acknowledgements, and mini-concert celebrating music, movement, and joy.</div>
       </div>
     </div>
   </div>
@@ -1288,9 +1288,9 @@ footer a:hover { text-decoration: underline; }
         <p>From integrative oncology &amp; mind-body medicine</p>
       </div>
       <div class="expect-card reveal">
-        <div class="expect-icon">&#127912;</div>
+        <div class="expect-icon">&#127912;&#128394;</div>
         <h3>Art Workshops</h3>
-        <p>Music, movement, and visual expression</p>
+        <p>Music, visual arts, storytelling &amp; writing</p>
       </div>
       <div class="expect-card reveal">
         <div class="expect-icon">&#128221;</div>
@@ -1366,13 +1366,13 @@ const speakerData = {
   },
   fanie: {
     name: 'Fanie Fabia',
-    function: 'Art Therapist & Cosmic Artist',
+    function: 'Art Therapist',
     photo: 'images/fanie.jpg',
-    bio: 'Fanie Fabia is an art therapist who has developed innovative approaches combining cosmic art and therapeutic practice. Her work with the Visual Analogue Scale (VAS) allows participants to evaluate their subjective experience before and after art therapy sessions, measuring immediate variations in feeling without aiming for a diagnosis.',
+    bio: 'Fanie Fabia is an art therapist who is interested in the impact of the creative process on mental and emotional well-being. With advanced university training in the arts, social action, and art therapy, she has developed over the years an approach tailored to each individual, using visual arts and music as tools for therapeutic support. She uses various methods to measure therapeutic progress, such as the Visual Analog Scale (VAS), which explores participants’ subjective experience before and after art therapy sessions, allowing observation of changes in perceived well-being without diagnostic intent.',
     ideas: [
-      'Art therapy is a clinical, guided process led by a trained art therapist who helps individuals explore emotions, trauma, and psychological challenges within a safe therapeutic relationship.',
+      'Art therapy is a guided process led by a trained art therapist, supporting individuals to explore their emotions and challenges through art, in a safe therapeutic setting.”',
       'The Visual Analogue Scale (VAS) allows for the assessment of immediate variations in subjective experience, adapted specifically for art therapy sessions.',
-      'Together, structured healing and open creative freedom meet people where they are \u2014 offering different entry points to healing.'
+      'Structured guidance and creative freedom come together to meet people where they are. This approach offers multiple ways to engage with the healing process.'
     ]
   },
   yazied: {
