--- a/index.html
+++ b/index.html
@@ -1324,6 +1324,76 @@ footer a:hover { text-decoration: underline; }
   </div>
 </section>
 
+
+
+
+<!-- ===== PARTNERS ===== -->
+<section class="partners">
+  <div class="container">
+    <div class="reveal">
+      <div class="section-label">Our Partners</div>
+      <h2 class="section-title">Supported By</h2>
+    </div>
+    <div class="partners-grid reveal">
+      <!-- Université Paris Cité -->
+      <svg class="partner-logo" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg">
+        <path d="M10,45 C10,45 15,10 20,10 C22,10 22,20 25,20 C28,20 28,10 30,10 C32,10 32,20 35,35 L25,45 Z" fill="#8B1A2B"/>
+        <text x="42" y="28" font-family="serif" font-size="14" font-weight="700" fill="#8B1A2B">Université</text>
+        <text x="42" y="45" font-family="serif" font-size="14" font-weight="700" fill="#8B1A2B">Paris Cité</text>
+      </svg>
+
+      <!-- EUR EURIP -->
+      <svg class="partner-logo" viewBox="0 0 260 60" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="25" cy="30" r="20" fill="none" stroke="#8B1A2B" stroke-width="1.5"/>
+        <text x="15" y="24" font-family="sans-serif" font-size="5" font-weight="700" fill="#8B1A2B">E U R</text>
+        <text x="11" y="36" font-family="sans-serif" font-size="4" fill="#8B1A2B">UNIVERSITÉ</text>
+        <text x="14" y="42" font-family="sans-serif" font-size="4" fill="#8B1A2B">PARIS CITÉ</text>
+        <text x="52" y="20" font-family="sans-serif" font-size="9" font-weight="600" fill="#333">Ecole Universitaire de Recherche</text>
+        <text x="52" y="32" font-family="sans-serif" font-size="9" font-weight="600" fill="#333">Interdisciplinaire de Paris</text>
+        <text x="52" y="48" font-family="sans-serif" font-size="9" font-weight="700" fill="#333" letter-spacing="1">GRADUATE SCHOOL</text>
+      </svg>
+
+      <!-- ANR -->
+      <svg class="partner-logo" viewBox="0 0 120 60" xmlns="http://www.w3.org/2000/svg">
+        <text x="5" y="42" font-family="sans-serif" font-size="32" font-weight="700" fill="#1A56DB">anr</text>
+        <circle cx="88" cy="18" r="6" fill="none" stroke="#1A56DB" stroke-width="1.5"/>
+        <circle cx="88" cy="18" r="2" fill="#1A56DB"/>
+      </svg>
+
+      <!-- Fondation Bettencourt Schueller -->
+      <svg class="partner-logo" viewBox="0 0 240 60" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="22" cy="25" r="12" fill="#F4A525"/>
+        <circle cx="16" cy="30" r="5" fill="#8BC34A"/>
+        <circle cx="30" cy="32" r="4" fill="#E040A0"/>
+        <circle cx="24" cy="18" r="3" fill="#FF6B6B"/>
+        <text x="45" y="25" font-family="serif" font-size="13" font-weight="700" fill="#333">Fondation</text>
+        <text x="45" y="40" font-family="serif" font-size="13" font-weight="700" fill="#333">Bettencourt Schueller</text>
+        <text x="45" y="52" font-family="sans-serif" font-size="6" fill="#888" font-style="italic">Reconnue d'utilité publique depuis 1987</text>
+      </svg>
+
+      <!-- Inserm -->
+      <svg class="partner-logo" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg">
+        <rect x="5" y="8" width="3" height="30" fill="#E8B931"/>
+        <rect x="10" y="14" width="3" height="24" fill="#E8B931"/>
+        <rect x="15" y="8" width="3" height="30" fill="#C0392B"/>
+        <rect x="20" y="18" width="3" height="20" fill="#E8B931"/>
+        <text x="30" y="30" font-family="sans-serif" font-size="22" font-weight="800" fill="#C0392B">Inserm</text>
+        <text x="30" y="44" font-family="sans-serif" font-size="6.5" fill="#555">La science pour la santé</text>
+        <text x="30" y="53" font-family="sans-serif" font-size="6" fill="#888" font-style="italic">From science to health</text>
+      </svg>
+
+      <!-- PSL Université Paris -->
+      <svg class="partner-logo" viewBox="0 0 180 60" xmlns="http://www.w3.org/2000/svg">
+        <text x="5" y="38" font-family="sans-serif" font-size="30" font-weight="700" fill="#1A56DB">PSL</text>
+        <rect x="82" y="12" width="18" height="18" fill="none" stroke="#1A56DB" stroke-width="1.5"/>
+        <text x="86" y="26" font-family="sans-serif" font-size="10" fill="#1A56DB">&#9733;</text>
+        <text x="30" y="55" font-family="sans-serif" font-size="8" font-weight="600" letter-spacing="1" fill="#333">UNIVERSITÉ PARIS</text>
+      </svg>
+    </div>
+  </div>
+</section>
+
+
 <!-- ===== FOOTER ===== -->
 <footer>
   <div class="container">
