--- a/index.html
+++ b/index.html
@@ -1408,7 +1408,7 @@ footer a:hover { text-decoration: underline; }
     </div>
     <div class="location-grid">
       <div class="location-map reveal">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.4!2d2.3608!3d48.8533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671ff5daed!2sLearning+Planet+Institute!5e0!3m2!1sfr!2sfr!4v1" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Learning Planet Institute location"></iframe>
+        <iframe src="https://maps.google.com/maps?q=Learning+Planet+Institute,+8+bis+Rue+Charles+V,+75004+Paris,+France&t=&z=16&ie=UTF8&iwloc=&output=embed&hl=en" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Learning Planet Institute location"></iframe>
       </div>
       <div class="location-info">
         <div class="location-card reveal">
