--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ footer a:hover { text-decoration: underline; }
       <h2 class="section-title">Supported By</h2>
     </div>
     <div class="partners-grid reveal">
-      <img src="images/Logo_Universit%C3%A9_Paris-Cit%C3%A9).svg" alt="Université Paris Cité" class="partner-logo">
+      <img src="images/Logo_Université_Paris-Cité).svg" alt="Université Paris Cité" class="partner-logo">
       <img src="images/Graduate_School_Ecole-Universitaire-de-Recherche-Interdisciplinaire-1200px2.png" alt="EUR Interdisciplinaire de Paris" class="partner-logo">
       <img src="images/5179248_lpi_logo_rvb.png" alt="Learning Planet Institute" class="partner-logo">
       <img src="images/ANR-logo.png" alt="ANR" class="partner-logo">
