--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@ footer a:hover { text-decoration: underline; }
       <div class="section-label">Join Us</div>
       <h2 class="section-title">This Is Not a Conference.<br>It's an Exploration.</h2>
       <p>Open to students, PhD candidates, researchers, teachers, and anyone curious about the future of health.</p>
-      <a href="https://form.typeform.com/to/gS5MkSrc" target="_blank" class="register-btn">Register Now &rarr;</a>
+      <a href="https://forms.gle/FLaFxmZKv4YEAwRx9" target="_blank" class="register-btn">Register Now &rarr;</a>
       <div class="register-details">
         <span>&#128197; Wednesday, February 25</span>
         <span>&#128336; 2:00 PM &mdash; 6:00 PM</span>
