--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@ footer a:hover { text-decoration: underline; }
         8 rue Charles V, Paris
       </div>
     </div>
-    <a href="https://form.typeform.com/to/gS5MkSrc" target="_blank" class="cta-btn">Register Now &rarr;</a>
+    <a href="https://forms.gle/FLaFxmZKv4YEAwRx9" target="_blank" class="cta-btn">Register Now &rarr;</a>
   </div>
 
   <a href="#about" class="scroll-indicator">
