--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@ footer a:hover { text-decoration: underline; }
         <div class="timeline-time">15:20 &mdash; 16:05</div>
         <div class="timeline-title">Immersive Workshops &mdash; Group 1</div>
         <div class="timeline-location">&#128205; Learning Extension &amp; Learning Center</div>
-        <div class="timeline-desc">Art therapy workshop with music and visual arts. Parallel storytelling and writing workshop and case study interviews.</div>
+        <div class="timeline-desc">Art therapy workshop with music and visual arts. Parallel narrative practices workshop and reauthoring conversations.</div>
         <div class="timeline-speakers">&#128100; Fanie Fabia &amp; Yazied Kei Lanur</div>
         <div class="timeline-expand">
           <div class="timeline-expand-inner">
@@ -1316,7 +1316,7 @@ footer a:hover { text-decoration: underline; }
         <div class="timeline-time">16:05 &mdash; 17:20</div>
         <div class="timeline-title">Break &amp; Workshops &mdash; Group 2</div>
         <div class="timeline-location">&#128205; Lounge &amp; Learning Extension</div>
-        <div class="timeline-desc">Sustainable food &amp; drinks break, then second round of art therapy and writing workshops.</div>
+        <div class="timeline-desc">Sustainable food &amp; drinks break, then second round of art therapy and narrative practices workshop.</div>
         <div class="timeline-speakers">&#128100; Fanie Fabia &amp; Yazied Kei Lanur</div>
         <div class="timeline-expand">
           <div class="timeline-expand-inner">
